assets/css/style.css
/* Importing Google Fonts 
For general text: font-family: "Work Sans", sans-serif;
For headings and game buttons: font-family: "Play", sans-serif;
As backup for all text: font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
*/
@import url("https://fonts.googleapis.com/css2?family=Play:wght@400;700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");

/* General style rules */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Work Sans", "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
    color: #060A39;
}

body {
    background-color: #f9f5c6;
}

h1,
h2,
h3 {
    font-family: "Play", "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
    margin-bottom: 15px;
}

h1 {
    font-size: 1.5rem;
    padding: 0 10px;
    margin-top: 5px;
}

h1>span {
    white-space: nowrap;
}

/* Box shadow for 3D "pressed effect" when buttons are clicked (active) for user feedback */
button:active {
    position: relative;
    top: -0.1rem;
    left: -0.1rem;
    /* Explanation of values: distance of shadow from element - blur/spread of shadow - no additional spread - color. Same for definition of second shadow*/
    box-shadow: 0.1em 0.1em 0 #fff, 0.2em 0.2em #060a39;
}

.container {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    text-align: center;
}

.box {
    display: flex;
    /*flex-direction: column;*/
    justify-content: center;
    flex-wrap: wrap;
}

/* LANDING PAGE SECTION */
#landing-section {
    margin: auto 20px;
}

#landing-section p {
    text-align: left;
    margin-bottom: 10px;
}

#rules>ul {
    margin-left: 40px;
    list-style: circle;
    text-align: left;
    line-height: 1.5;
}

#rules-img {
    width: 100%;
    margin: 40px auto;
}

/* Username form*/
#username-box {
    display: flex;
    flex-direction: row;
    text-align: right;
    flex-wrap: wrap;
    border: 2px groove #7B8246;
    border-radius: 10px;
    padding: 20px 10px;
}

#username-input {
    width: 160px;
    line-height: 1.5;
    font-size: 1em;
}

#submit {
    width: 160px;
    margin: 5px auto;
    padding-top: 10px;
    padding-bottom: 10px;
    background: rgba(217, 238, 62, 0.719);
    border: 2px solid #060a39;
    border-radius: 5px;
    line-height: 1.5;
    font-size: 1em;
    font-weight: 500;
}

/* GAME SECTION */

/* Scoreboard display current scores and choices. */
#scoreboard-box {
    display: flex;
    flex-direction: row;
    justify-content: center;
    height: 80px;
    margin-bottom: 10px;
}

#user-box {
    width: 150px;
    border: 2px groove hotpink;
    border-radius: 10px;
    margin-right: 9px;
    padding: 10px 0;
    font-size: 0.8em;
}

#computer-box {
    border: 2px groove darkslateblue;
    width: 150px;
    border-radius: 10px;
    padding: 10px 0;
    font-size: 0.8em;
}

/* Game results area: display detailed result of each round to user */
#result-box {
    margin-top: 10px;
    width: 80%;
    height: 100px;
    font-weight: 600;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 10px auto;
}

/* Interactive game area: choice buttons for user to play game. */
#button-box {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: flex-end;
    width: 100%;
    margin-bottom: 40px;
}

.choice-button {
    font-size: 1.5rem;
    font-family: "Play", "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
    width: 140px;
    height: 140px;
    margin: 5px;
    padding-top: 5px;
    display: flex;
    justify-content: center;
    border: 2px solid #060a39;
    border-radius: 10px;
}

.choice-button>span {
    padding-right: 5px;
}

#rock {
    background: url(../images/rock.webp) no-repeat bottom / contain white;
}

#paper {
    background: url(../images/paper.webp) no-repeat bottom / contain white;
}

#scissors {
    background: url(../images/scissors.webp) no-repeat center / contain white;
}

#lizard {
    background: url(../images/lizard.webp) no-repeat center / contain white;
}

#spock {
    background: url(../images/spock.webp) no-repeat center / contain white;
}

/* COMPLETED GAME SECTION */

#completed-section {
    margin: 60px 15px;
    display: flex;
    flex-direction: column;
}

#completed-section>h2 {
    font-size: 1.4em;
}

#final-score {
    margin: 40px auto;
    font-size: 1.3em;
    font-weight: 600;
}

#final-result {
    margin-bottom: 60px;
    font-size: 1.2em;
    line-height: 1.5;
}

#play-again {
    width: 200px;
    margin: 5px auto;
    padding: 20px;
    background: rgba(217, 238, 62, 0.719);
    border: 2px solid #060a39;
    border-radius: 5px;
    line-height: 1.5;
    font-size: 1.4em;
    font-weight: 600;
}

/* Media query: screens ≥ 375px (larger mobile devices) */
@media screen and (min-width: 375px) {

    #result-box {
        width: 80%;
    }

    #button-box {
        width: 85%;
        margin: auto;
    }

    #rules-img {
        width: 80%;
    }
}

/* Media query: screens ≥ 700px (very large mobile devices) */
@media screen and (min-width: 700px) {
    .choice-button {
        width: 150px;
        height: 150px;
        padding-top: 20px;
    }

    #result-box {
        width: 60%;
    }

    #button-box {
        width: 70%;
    }
}

/* Media query: screens ≥ 768px (tablets) */
@media screen and (min-width: 768px) {
    h1 {
        font-size: 1.7rem;
    }

    #rules-img {
        width: 50%;
    }

    #username-box {
        display: flex;
        flex-direction: row;
        justify-content: center;
    }

    #button-box {
        width: 65%;
    }
}

/* Media query: screens ≥992px (laptops, desktops)*/
@media screen and (min-width: 992px) {
    .choice-button:hover {
        font-size: 1.7rem;
        border: 3px solid #060a39;
    }

    #submit:hover {
        background-color: rgba(186, 196, 106, 0.795);
    }

    #play-again:hover {
        background-color: rgba(186, 196, 106, 0.795);
    }

}

